Need to add content for Our Product pages before meeting tomorrow. Look into a way to change the templates between OurProduct and main...

--- a/client/lib/site/elements/container.overrides.import.less
+++ b/client/lib/site/elements/container.overrides.import.less
@@ -1,3 +1,8 @@
 /*******************************
          Site Overrides
 *******************************/
+
+//Color for text container
+.ui.text.container {
+  font-color: @black;
+}
