--- a/client/lib/site/globals/site.overrides.import.less
+++ b/client/lib/site/globals/site.overrides.import.less
@@ -1,3 +1,16 @@
 /*******************************
          Site Overrides
 *******************************/
+.landing-image  {
+    background-image: url('pictures/home/randomLockBox.jpg') !important;
+    background-size: 100% 100% !important;
+    padding: 0;
+    margin: 0;
+}
+
+/*.body-back {
+    background-image: url('pictures/home/allBackground.jpg') !important;
+    background-size: 100% 100% !important;
+    padding: 0;
+    margin: 0;
+}*/
